--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,6 +2,14 @@
     display: none;
 }
 
+.avatar {
+    width: 4em;
+    height: 4em;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .edit {
     transition: opacity .2s ease;
     cursor: pointer;
